--- a/src/app/shared/components/input-text/input-text.component.html
+++ b/src/app/shared/components/input-text/input-text.component.html
@@ -1,10 +1,38 @@
 <div>
-  <mat-form-field appearance="fill">
-    <mat-label>Fill form field</mat-label>
-    <input matInput placeholder="Placeholder" [formControl]="favoriteColorControl">
-    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-<!--    <mat-hint>Hint</mat-hint>-->
-  </mat-form-field>
+  <div class="relative z-0 my-4">
+  <!-- focus success/error -->
+    <input [formControl]="textControl" [type]="type" class="block py-2.5 px-0 w-full text-lg bg-transparent border-0 border-b-2 appearance-none focus:outline-none focus:ring-0 peer"
+           [ngClass]="{
+           'text-red-900': textControl.invalid,
+           'text-gray-900' : !textControl.invalid,
+           'border-red-300': textControl.invalid,
+           'border-gray-300' : !textControl.invalid,
+           'focus:border-red-300': textControl.invalid,
+           'focus:border-indigoBlack-300' : !textControl.invalid
+           }"
+           placeholder=" " required/>
+  <!-- peer-focus success/error -->
+    <label class="absolute text-lg duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"
+           [ngClass]="{
+           'peer-focus:text-red-300': textControl.invalid,
+           'peer-focus:text-indigoBlack-300' : !textControl.invalid,
+           'text-red-500': textControl.invalid,
+           'text-gray-500' : !textControl.invalid
+           }">
+      Email
+    </label>
+  </div>
+  <!-- si pasa deberia agregarse estado success/error -->
+  <div id="standard_error_help" class="mt-2 text-xs text-threateningRed-500">
+    <div *ngIf="textControl.invalid && (textControl.dirty || textControl.touched)">
+      <div *ngIf="textControl.errors?.['required']">
+        Name is required.
+      </div>
+      <div *ngIf="textControl.errors?.['minlength']">
+        Name must be at least 4 characters long.
+      </div>
+    </div>
+  </div>
 </div>
 <button class="bg-red-600" (click)="print()">
   button
