--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,14 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!--<ion-header [translucent]="true">-->
+<!--  <ion-toolbar>-->
+<!--    <ion-title>login</ion-title>-->
+<!--  </ion-toolbar>-->
+<!--</ion-header>-->
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <app-input-text></app-input-text>
+<!--  <ion-header collapse="condense">-->
+<!--    <ion-toolbar>-->
+<!--      <ion-title size="large">login</ion-title>-->
+<!--    </ion-toolbar>-->
+<!--  </ion-header>-->
+  <div class="p-2.5 w-full max-w-xs mx-auto">
+    <div class="text-2xl font-bold text-stone-800">Iniciar Sesion</div>
+    <div>
+      <form action="">
+        <app-input-text type="email"></app-input-text>
+        <app-input-text type="password"></app-input-text>
+        <app-checkbox></app-checkbox>
+        <app-radio-button></app-radio-button>
+        <app-filled-button></app-filled-button>
+      </form>
+    </div>
+  </div>
+
 </ion-content>
