--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,6 +83,7 @@
    */
 
   body {
+    --ion-background-color: #e6e6e6;
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -153,7 +154,7 @@
    */
 
   .ios body {
-    --ion-background-color: #000000;
+    //--ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
@@ -197,7 +198,7 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
+    //--ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
