--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "GothamRoundedBold";
+  src: url("assets/fonts/GothamRoundedBold.otf");
+}
