--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,18 +4,21 @@
 <!--  </ion-toolbar>-->
 <!--</ion-header>-->
 
-<ion-content [fullscreen]="true">
+<ion-content>
 <!--  <ion-header collapse="condense">-->
 <!--    <ion-toolbar>-->
 <!--      <ion-title size="large">login</ion-title>-->
 <!--    </ion-toolbar>-->
 <!--  </ion-header>-->
   <div class="p-2.5 w-full max-w-xs mx-auto">
-    <div class="text-2xl font-bold text-stone-800">Iniciar Sesion</div>
-    <div>
+    <div class="mt-11">
+    <app-logo></app-logo>
+    </div>
+    <div class="mt-16">
+    <div class="text-2xl font-bold font-gotham text-indigoBlack-500">Iniciar Sesion</div>
       <form action="">
-        <app-input-text type="email"></app-input-text>
-        <app-input-text type="password"></app-input-text>
+        <app-input-text type="email" placeholder="Email"></app-input-text>
+        <app-input-text type="password" placeholder="Password"></app-input-text>
         <app-checkbox></app-checkbox>
         <app-radio-button></app-radio-button>
         <app-filled-button></app-filled-button>
