--- a/src/app/shared/components/input-text/input-text.component.html
+++ b/src/app/shared/components/input-text/input-text.component.html
@@ -9,7 +9,7 @@
            'focus:border-threateningRed-300': textControl.invalid && (textControl.dirty || textControl.touched),
            'focus:border-indigoBlack-300' : textControl.valid || !textControl.touched
            }" placeholder="" required/>
-    <label class="absolute text-lg duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"
+    <label class="absolute font-gotham text-lg duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"
            [ngClass]="{
            'peer-focus:text-threateningRed-300': textControl.invalid && (textControl.dirty || textControl.touched),
            'peer-focus:text-indigoBlack-300' : textControl.valid || !textControl.touched,
@@ -19,7 +19,7 @@
       {{placeholder}}
     </label>
   </div>
-  <div class="mt-2 text-xs text-threateningRed-500 h-8">
+  <div class="mt-2 text-xs text-threateningRed-500 h-8 font-gotham">
     <div *ngIf="textControl.invalid && (textControl.dirty || textControl.touched)">
       <div *ngIf="textControl.errors?.['email']">
         El email no es correcto
