fix(login): fix design layout

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,10 +7,12 @@
       <form action="" class="flex flex-col justify-between basis-5/12">
         <app-input-text type="email" placeholder="Email"></app-input-text>
         <app-input-text type="password" placeholder="Password"></app-input-text>
-        <div class="basis-2/12">
+        <div class="">
         <app-checkbox class="text-lg" contentText="Mantener sesion activa"></app-checkbox>
         </div>
-        <app-filled-button contentText="Continuar"></app-filled-button>
+        <div class="pt-4">
+          <app-filled-button contentText="Continuar"></app-filled-button>
+        </div>
       </form>
       <div class="flex flex-col gap-5">
         <div class="flex justify-center items-center gap-2">
