fix(reset-password): add layout, modify variables sass

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,7 +83,9 @@
    */
 
   body {
-    --ion-background-color: #e6e6e6;
+    --ion-background-color: #fff;
+    --ion-text-color: #012c56;
+    --ion-toolbar-background: #F8F8F8;
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -201,7 +203,7 @@
     //--ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #ffffff;
+    //--ion-text-color: #ffffff;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
@@ -228,7 +230,7 @@
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
+    //--ion-toolbar-background: #1f1f1f;
 
     --ion-tab-bar-background: #1f1f1f;
 
