--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -29,7 +29,7 @@
       </div>
       <div class="flex flex-col gap-5 items-center justify-center">
         <a href="#" class="text-base font-normal text-indigoBlack-500"><span class=" text-gray-600">¿No tienes cuenta?</span> <span class="font-gotham"> Registrate aqui!</span></a>
-        <a href="#" class="text-base font-normal text-indigoBlack-500"><span class=" text-gray-600">¿Perdiste tu cuenta?</span> <span class="font-gotham"> Ingresa Aqui!</span></a>
+        <a routerLink="/reset-password" class="text-base font-normal text-indigoBlack-500"><span class=" text-gray-600">¿Perdiste tu cuenta?</span> <span class="font-gotham"> Ingresa Aqui!</span></a>
       </div>
   </div>
 </ion-content>
