--- a/src/app/tabs/home/home.page.html
+++ b/src/app/tabs/home/home.page.html
@@ -1,13 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="flex flex-col gap-4">
+    <div class="p-2 w-full gap-3 mt-6 mx-auto flex flex-col">
+      <app-search-bar [routerLink]="['/tabs/search']"></app-search-bar>
+      <div class="flex gap-2 overflow-x-auto">
+        <app-filter-button></app-filter-button>
+        <app-filter-button></app-filter-button>
+        <app-filter-button></app-filter-button>
+        <app-filter-button></app-filter-button>
+      </div>
+    </div>
+    <div class="p-2.5 w-full mx-auto flex flex-col gap-4">
+      <div class="font-gotham text-xl">Cerca de ti</div>
+      <div *ngFor="let card of info">
+        <app-drive-card [info]="card"></app-drive-card>
+      </div>
+    </div>
+  </div>
 </ion-content>
