--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/home"></ion-back-button>
+    </ion-buttons>
     <ion-title>search</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">search</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="flex flex-col gap-4">
+    <div class="p-2 w-full gap-3 mt-6 mx-auto flex flex-col">
+      <app-search-input #search></app-search-input>
+    </div>
+  </div>
 </ion-content>
