--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,26 +1,24 @@
-
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label class="ion-color-">Home</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="search">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="search-outline"></ion-icon>
       <ion-label>Buscar</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="publish">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Publicar</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="history">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="car-outline"></ion-icon>
       <ion-label>Mis Viajes</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="profile">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
