--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,9 +4,9 @@
       <div class="text-2xl font-bold font-gotham text-indigoBlack-500">Iniciar
         Sesion
       </div>
-      <form action="" class="flex flex-col justify-between basis-5/12">
-        <app-input-text type="email" placeholder="Email"></app-input-text>
-        <app-input-text type="password" placeholder="Password"></app-input-text>
+      <form (submit)="submit($event)" class="flex flex-col justify-between basis-5/12">
+        <app-input-text #user type="email" placeholder="Email"></app-input-text>
+        <app-input-text #password type="password" placeholder="Password"></app-input-text>
         <div class="">
         <app-checkbox class="text-lg" contentText="Mantener sesion activa"></app-checkbox>
         </div>
