--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -232,7 +232,7 @@
 
     //--ion-toolbar-background: #1f1f1f;
 
-    --ion-tab-bar-background: #1f1f1f;
+    --ion-tab-bar-background: #EBEBEB;
 
     --ion-card-background: #1e1e1e;
   }
