fix(home): modify card, filter and avatar

--- a/src/app/shared/components/Avatars/avatar-home/avatar-home.component.html
+++ b/src/app/shared/components/Avatars/avatar-home/avatar-home.component.html
@@ -1,6 +1,6 @@
 <div
   class="max-w-[30px] max-h-[30px] rounded-full shadow-md shadow-black/20">
   <img class="object-fill aspect-square rounded-full"
-       src="https://cdn.discordapp.com/attachments/982116594543099924/1147603255032041642/5ni93d3zaera1.png"
+       [src]="url"
        alt="">
 </div>
