--- a/src/app/shared/components/filter-button/filter-button.component.html
+++ b/src/app/shared/components/filter-button/filter-button.component.html
@@ -1,8 +1,8 @@
 <div class="flex w-40 items-center rounded-md gap-3 p-2 m-1  shadow-md shadow-black/50">
   <img class="w-12 h-12 object-fill aspect-square"
-       src="https://cdn.discordapp.com/attachments/982116594543099924/1147603255032041642/5ni93d3zaera1.png"
+       src="{{data.imagen}}"
        alt="">
   <div class="font-gotham text-sm">
-    Comunidad
+    {{data.name}}
   </div>
 </div>
