--- a/src/app/shared/components/drive-card/drive-card.component.html
+++ b/src/app/shared/components/drive-card/drive-card.component.html
@@ -13,8 +13,11 @@
     </div>
   </div>
   <div class="flex justify-between items-center gap-2">
-    <div class="flex items-center" *ngFor="let passenger of info.passengerAvatars">
+
+    <div class="flex items-center">
+    <div *ngFor="let passenger of info.passengerAvatars">
       <app-avatar-home [url]="passenger.url"></app-avatar-home>
+    </div>
     </div>
     <div>${{info.cost}}</div>
     <button
