fix(login): modify input and checkbox

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,8 @@
         <app-input-text #user type="email" placeholder="Email"></app-input-text>
         <app-input-text #password type="password" placeholder="Password"></app-input-text>
         <div class="">
-        <app-checkbox class="text-lg" contentText="Mantener sesion activa"></app-checkbox>
+        <app-checkbox #check class="text-lg" contentText="Mantener sesion activa">
+        </app-checkbox>
         </div>
         <div class="pt-4">
           <app-filled-button contentText="Continuar"></app-filled-button>
