--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,15 +4,15 @@
       <div class="text-2xl font-bold font-gotham text-indigoBlack-500">Iniciar
         Sesion
       </div>
-      <form (submit)="submit($event)" class="flex flex-col justify-between basis-5/12">
+      <form (ngSubmit)="submit($event)" class="flex flex-col justify-between basis-5/12">
         <app-input-text #user type="email" placeholder="Email"></app-input-text>
         <app-input-text #password type="password" placeholder="Password"></app-input-text>
-        <div class="">
+        <div>
         <app-checkbox #check class="text-lg" contentText="Mantener sesion activa">
         </app-checkbox>
         </div>
         <div class="pt-4">
-          <app-filled-button contentText="Continuar"></app-filled-button>
+          <app-filled-button #filled contentText="Continuar"></app-filled-button>
         </div>
       </form>
       <div class="flex flex-col gap-5">
