fix(date-selector-component): add date selector component

--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -1,3 +1,7 @@
-<p>
-  date-selector works!
-</p>
+<mat-form-field class="w-full">
+  <mat-label>Fecha de nacimiento</mat-label>
+  <input matInput [matDatepicker]="picker" [matDatepickerFilter]="filter">
+  <mat-hint>MM/DD/YYYY</mat-hint>
+  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
