fix(misc): rename register state to step state

--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="w-full">
   <mat-label>Fecha de nacimiento</mat-label>
-  <input matInput [matDatepicker]="picker" [matDatepickerFilter]="filter">
+  <input matInput [matDatepicker]="picker">
   <mat-hint>MM/DD/YYYY</mat-hint>
   <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
