--- a/src/app/register/step2/step2.page.html
+++ b/src/app/register/step2/step2.page.html
@@ -9,7 +9,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col">
-    <div class="flex flex-col gap-5">
+    <form (ngSubmit)="submit($event)" class="flex flex-col gap-5">
       <app-input-text placeholder="Usuario" [type]="'text'"></app-input-text>
       <app-input-text placeholder="Apellido"
                       [type]="'password'"></app-input-text>
@@ -30,6 +30,6 @@
         </div>
       </div>
         <app-filled-button contentText="Registrarse"></app-filled-button>
-    </div>
+    </form>
   </div>
 </ion-content>
