--- a/src/app/register/step2/step2.page.html
+++ b/src/app/register/step2/step2.page.html
@@ -9,6 +9,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col">
+    <app-stepper></app-stepper>
     <form (ngSubmit)="submit($event)" class="flex flex-col gap-5">
       <app-input-text placeholder="Usuario" [type]="'text'"></app-input-text>
       <app-input-text placeholder="Apellido"
@@ -29,7 +30,7 @@
           <app-radio-button contentText="Mujer"></app-radio-button>
         </div>
       </div>
-        <app-filled-button contentText="Registrarse"></app-filled-button>
+        <app-filled-button contentText="Continuar"></app-filled-button>
     </form>
   </div>
 </ion-content>
