--- a/src/app/register/step3/step3.page.html
+++ b/src/app/register/step3/step3.page.html
@@ -9,6 +9,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col">
+    <app-stepper></app-stepper>
     <form (ngSubmit)="submit($event)" class="flex flex-col gap-5">
       <app-filled-button
         [blocked]="!canFinish"
