--- a/src/app/register/step4/step4.page.html
+++ b/src/app/register/step4/step4.page.html
@@ -15,12 +15,14 @@
         <ion-icon class="w-40 h-40" name="person-circle-outline"></ion-icon>
         <div class="font-gotham text-xl">Cambiar foto</div>
       </div>
+      <app-input-area label="Sobre mi" placeholder="Ejemplo soy un estudiante de computacion, me gusta el futbol"></app-input-area>
       <div class="flex flex-col gap-3">
         <div class="font-gotham text-base">Preferencia al viajar</div>
         <div class="flex flex-wrap w-80">
           <div class="bg-gray-200 rounded-full p-2 font-gotham">Pet friendly</div>
         </div>
       </div>
+      <app-user-preferences-selector-bar></app-user-preferences-selector-bar>
       <app-filled-button
         [blocked]="!canFinish"
         contentText="Finalizar"></app-filled-button>
