--- a/src/app/shared/components/user-preferences-selector-bar/user-preferences-selector-bar.component.html
+++ b/src/app/shared/components/user-preferences-selector-bar/user-preferences-selector-bar.component.html
@@ -1,2 +1,9 @@
+<div class="flex flex-col gap-3">
+  <div class="font-gotham text-base">Preferencia al viajar</div>
+  <div class="flex flex-wrap w-80 gap-2">
+  <ng-container *ngFor="let pref of preferencesUser$ | async">
+    <div class="inline bg-gray-200 rounded-full p-2 font-gotham">{{ pref.name }}</div>
+  </ng-container>
+  </div>
+</div>
 <ion-button expand="block" (click)="openModal()">Open</ion-button>
-<p>{{ message }}</p>
