--- a/src/app/shared/components/user-preferences-selector/user-preferences-selector.component.html
+++ b/src/app/shared/components/user-preferences-selector/user-preferences-selector.component.html
@@ -1,20 +1,22 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
+      <ion-button color="medium" (click)="cancel()">Vaciar</ion-button>
     </ion-buttons>
     <ion-title>Welcome</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+      <ion-button (click)="confirm()" [strong]="true">Continuar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ul *ngFor="let pref of preferencesList.values(); index as i" class="w-96">
-    <app-user-preferences-selector-item (onSelected)="onSelectItem($event)"
+  <ul *ngFor="let pref of databasePreferencesList.values(); index as i" class="w-96">
+    <app-user-preferences-selector-item
+      [selected]="pref.selected"
+      (onSelected)="onSelectItem($event)"
       (onDeselected)="onDeselectItem($event)"
       [item]="pref"></app-user-preferences-selector-item>
-    <ng-container *ngIf="preferencesList.size - 1 !== i">
+    <ng-container *ngIf="databasePreferencesList.size - 1 !== i">
       <app-divider></app-divider>
     </ng-container>
   </ul>
