fix(preference-selector): modify bar component and adjust items (#66)

--- a/src/app/shared/components/user-preferences-selector-item/user-preferences-selector-item.component.html
+++ b/src/app/shared/components/user-preferences-selector-item/user-preferences-selector-item.component.html
@@ -4,8 +4,7 @@
     'bg-primary-50': selected,
     'text-primary-600': selected,
     }"
-    class="w-full border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50 flex items-center
-">
+    class="max-w-lg flex items-center h-16">
     <div class="basis-4/5 gap-2 flex items-center">
       <ion-icon class="w-12 h-12" [name]="item.icon"></ion-icon>
       <div class="text-lg">{{ item.name }}</div>
