--- a/src/app/shared/components/user-preferences-selector-bar/user-preferences-selector-bar.component.html
+++ b/src/app/shared/components/user-preferences-selector-bar/user-preferences-selector-bar.component.html
@@ -1,9 +1,13 @@
-<div class="flex flex-col gap-3">
+<div class="flex flex-col gap-4">
   <div class="font-gotham text-base">Preferencia al viajar</div>
-  <div class="flex flex-wrap w-80 gap-2">
-  <ng-container *ngFor="let pref of preferencesUser$ | async">
-    <div class="inline bg-gray-200 rounded-full p-2 font-gotham">{{ pref.name }}</div>
-  </ng-container>
-  </div>
+    <div class="flex flex-wrap w-80 gap-2">
+      <ng-container *ngFor="let pref of preferencesUser$ | async">
+        <div class="inline bg-gray-200 rounded-full p-2 font-gotham">{{ pref.name }}</div>
+      </ng-container>
+    </div>
+  <mat-form-field (click)="openModal()">
+    <mat-label>Elegir</mat-label>
+    <mat-select>
+    </mat-select>
+  </mat-form-field>
 </div>
-<ion-button expand="block" (click)="openModal()">Open</ion-button>
