--- a/src/app/shared/components/input-area/input-area.component.html
+++ b/src/app/shared/components/input-area/input-area.component.html
@@ -5,7 +5,7 @@
     labelPlacement="floating"
     fill="outline"
     placeholder="Ejemplo: Soy un estudiante de computacion, me gusta el futbol" rows="6"></ion-textarea>
-  <div class="mt-2 text-xs text-threateningRed-500 h-8 font-gotham">
+  <div class="text-xs text-threateningRed-500 h-4 font-gotham">
     <div *ngIf="textControl.invalid && (textControl.dirty || textControl.touched)">
       <div *ngIf="textControl.errors?.['required']">
         {{title}} es requerido
