fix(step2-page): add form logic

--- a/src/app/register/step2/step2.page.html
+++ b/src/app/register/step2/step2.page.html
@@ -7,21 +7,22 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col">
-    <app-stepper></app-stepper>
-    <form (ngSubmit)="submit($event)" class="flex flex-col gap-5">
-      <app-input-text placeholder="Usuario" [type]="'text'"></app-input-text>
-      <app-input-text placeholder="Apellido"
-                      [type]="'password'"></app-input-text>
-      <app-date-selector></app-date-selector>
-      <div class="flex justify-center items-center gap-2">
-        <div class="w-1/4 h-px bg-indigoBlack-500"></div>
-        <div class="text-sm font-gotham text-indigoBlack-500">Genero</div>
-        <div class="w-1/4 h-px bg-indigoBlack-500"></div>
-      </div>
+    <ion-content [fullscreen]="true">
+      <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col">
+        <app-stepper></app-stepper>
+        <form (ngSubmit)="submit($event)" class="flex flex-col gap-5">
+          <app-input-text #user placeholder="Usuario" [type]="'text'"></app-input-text>
+          <app-input-text #lastName placeholder="Apellido"
+            [type]="'password'"></app-input-text>
+          <app-phone-selector #phone></app-phone-selector>
+          <app-date-selector #date></app-date-selector>
+          <div class="flex justify-center items-center gap-2">
+            <div class="w-1/4 h-px bg-indigoBlack-500"></div>
+            <div class="text-sm font-gotham text-indigoBlack-500">Genero</div>
+            <div class="w-1/4 h-px bg-indigoBlack-500"></div>
+          </div>
           <app-radio-button #radio name="genero" [radioButtons]="buttons"></app-radio-button>
-        <app-filled-button contentText="Registrarse"></app-filled-button>
-    </form>
+          <app-filled-button contentText="Registrarse"></app-filled-button>
+        </form>
   </div>
 </ion-content>
