--- a/src/app/register/step4/step4.page.html
+++ b/src/app/register/step4/step4.page.html
@@ -13,10 +13,10 @@
     <form (ngSubmit)="submit($event)" class="flex flex-col gap-5">
       <div class="flex flex-col items-center">
         <ion-icon class="w-40 h-40" name="person-circle-outline"></ion-icon>
-        <div class="font-gotham text-xl">Cambiar foto</div>
+        <div class="font-gotham text-xl bg-bee-400 rounded-lg p-2">Cambiar foto</div>
       </div>
-      <app-input-area label="Sobre mi" placeholder="Ejemplo soy un estudiante de computacion, me gusta el futbol"></app-input-area>
-      <app-user-preferences-selector-bar></app-user-preferences-selector-bar>
+      <app-input-area #area label="Sobre mi" placeholder="Ejemplo soy un estudiante de computacion, me gusta el futbol"></app-input-area>
+      <app-user-preferences-selector-bar #preference></app-user-preferences-selector-bar>
       <app-filled-button
         [blocked]="!canFinish"
         contentText="Finalizar"></app-filled-button>
