--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -1,7 +1,18 @@
+<div>
 <mat-form-field class="w-full">
   <mat-label>Fecha de nacimiento</mat-label>
-  <input matInput [matDatepicker]="picker">
-  <mat-hint>MM/DD/YYYY</mat-hint>
+  <input
+    [max]="_date"
+    placeholder="MM/DD/YYYY" (dateInput)="onDate($event)" matInput [matDatepicker]="picker">
+<!--  <mat-hint>MM/DD/YYYY</mat-hint>-->
   <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
+  <div class="mt-2 text-xs text-threateningRed-500 h-8 font-gotham">
+    <div *ngIf="dateControl.invalid && (dateControl.dirty || dateControl.touched)">
+      <div *ngIf="dateControl.errors?.['required']">
+        Debes ingresar una fecha valida
+      </div>
+    </div>
+  </div>
+</div>
