fix(user-preference-selector): state clear bug and rename title

--- a/src/app/shared/components/user-preferences-selector/user-preferences-selector.component.html
+++ b/src/app/shared/components/user-preferences-selector/user-preferences-selector.component.html
@@ -5,7 +5,7 @@
         (click)="cancel()">Vaciar
       </ion-button>
     </ion-buttons>
-    <ion-title>Welcome</ion-title>
+    <ion-title>Seleccion Multiple</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()"
         [strong]="true">Continuar
