fix(phone-selector): modify countries list (#62)

--- a/src/app/register/step2/step2.page.html
+++ b/src/app/register/step2/step2.page.html
@@ -14,7 +14,7 @@
           <app-input-text #user placeholder="Usuario" [type]="'text'"></app-input-text>
           <app-input-text #lastName placeholder="Apellido"
             [type]="'password'"></app-input-text>
-          <app-phone-selector #phone></app-phone-selector>
+          <app-phone-selector-bar></app-phone-selector-bar>
           <app-date-selector #date></app-date-selector>
           <div class="flex justify-center items-center gap-2">
             <div class="w-1/4 h-px bg-indigoBlack-500"></div>
