--- a/src/app/shared/components/user-preferences-selector/user-preferences-selector.component.html
+++ b/src/app/shared/components/user-preferences-selector/user-preferences-selector.component.html
@@ -14,15 +14,16 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ul *ngFor="let pref of databasePreferencesList.values(); index as i"
-    class="w-full">
+  <ul class="w-full">
+    <li *ngFor="let pref of getPreferences(); index as i">
     <app-user-preferences-selector-item
       [selected]="pref.selected"
       (onSelected)="onSelectItem($event)"
       (onDeselected)="onDeselectItem($event)"
       [item]="pref"></app-user-preferences-selector-item>
-    <ng-container *ngIf="databasePreferencesList.size - 1 !== i">
+    <ng-container *ngIf="preferencesData.size - 1 !== i">
       <app-divider></app-divider>
     </ng-container>
+    </li>
   </ul>
 </ion-content>
