--- a/src/app/register/step1/step1.page.html
+++ b/src/app/register/step1/step1.page.html
@@ -33,6 +33,13 @@
         [type]="'password'"></app-input-text>
       <app-input-text #confirmpassword placeholder="Confirmar Password"
         [type]="'password'"></app-input-text>
+      <div *ngIf="checkerGroup" class="text-xs text-threateningRed-500 h-4 font-gotham">
+        <div *ngIf="checkerGroup.invalid && (checkerGroup.dirty || checkerGroup.touched)">
+          <div *ngIf="checkerGroup.errors?.['password']">
+            Las contraseñas no coinciden
+          </div>
+        </div>
+      </div>
       <app-checkbox #check
         errorText="Debes aceptar los terminos y condiciones"
         [activeError]="true"
