--- a/src/app/shared/components/filled-button/filled-button.component.html
+++ b/src/app/shared/components/filled-button/filled-button.component.html
@@ -1,5 +1,6 @@
 <button
   type="submit"
+  (click)="clicked($event)"
   [disabled]="blocked"
   class="tracking-wider font-gotham inline-block w-full rounded p-4 text-lg uppercase leading-normal text-white transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0"
   [ngClass]="{
