--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -1,13 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>publish</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">publish</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="h-full flex flex-col">
+    <div class="flex flex-col px-6 py-4">
+      <div>
+        <app-input-text placeholder="Salida"></app-input-text>
+        <app-input-text placeholder="Destino"></app-input-text>
+        <div class="flex gap-5">
+          <app-date-selector [desc]="false" label="Fecha"></app-date-selector>
+          <app-input-text placeholder="Asientos"></app-input-text>
+        </div>
+      </div>
+    </div>
+    <div class="h-full">
+      <div class="bg- bg-[url('https://s2.ppllstatics.com/laverdad/www/multimedia/202209/05/media/cortadas/mapa-murcia-kQgE-U170116261306200E-1248x770@La%20Verdad.jpg')] h-full"></div>
+    </div>
+    <div class="absolute right-24 bottom-5">
+      <app-adaptative-button text="Publicar Viaje" color="bg-stone-800" color_hover="bg-stone-700" font_size="text-xl font-gotham" size="px-8 py-4" text_color="text-white"></app-adaptative-button>
+    </div>
+  </div>
 </ion-content>
