fix(components-misc): modify dependencies and links

--- a/src/app/shared/components/drive-card/drive-card.component.html
+++ b/src/app/shared/components/drive-card/drive-card.component.html
@@ -21,6 +21,7 @@
     </div>
     <div>${{info.cost}}</div>
     <button
+      (click)="buttonClick($event)"
       type="button"
       class="basis-1/3 tracking-wider font-light py-0.5 inline-block w-full text-sm rounded bg-indigoBlack-500 uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] ">
       Solicitar
