fix(trip-details): add url service for back button functionality

--- a/src/app/trip-details/trip-details.page.html
+++ b/src/app/trip-details/trip-details.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/history"></ion-back-button>
+      <ion-back-button [defaultHref]="prevHref"></ion-back-button>
     </ion-buttons>
     <ion-title>Trip Details</ion-title>
   </ion-toolbar>
