fix(search-modal): add search-modal (#84) and refactor components

--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<a class="mb-3">
+<a (click)="openModal()" class="mb-3">
   <div class="focus:z-[3] focus:text-neutral-700 focus:outline-none focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] rounded-br-md rounded-tr-md border rounded-bl-md rounded-tl-md border-solid border-neutral-300 focus:border-primary relative mb-4 flex w-full flex-wrap items-stretch">
     <span
       class="input-group-text flex items-center whitespace-nowrap rounded px-3 py-4 text-center text-base font-normal text-neutral-700 dark:text-neutral-200"
