fix(trip-details): modify passanger-item

--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -13,8 +13,6 @@
     <div class="h-full">
       <div class="bg- bg-[url('https://s2.ppllstatics.com/laverdad/www/multimedia/202209/05/media/cortadas/mapa-murcia-kQgE-U170116261306200E-1248x770@La%20Verdad.jpg')] h-full"></div>
     </div>
-    <div class="absolute right-24 bottom-5">
-      <app-adaptative-button text="Publicar Viaje" color="bg-stone-800" color_hover="bg-stone-700" font_size="text-xl font-gotham" size="px-8 py-4" text_color="text-white"></app-adaptative-button>
-    </div>
+      <app-adaptative-button text="Publicar Viaje" color="bg-stone-800" color_hover="bg-stone-700" font_size="text-xl font-gotham" size="px-8 py-4 w-full" text_color="text-white"></app-adaptative-button>
   </div>
 </ion-content>
