--- a/src/app/trip-details/trip-details.page.html
+++ b/src/app/trip-details/trip-details.page.html
@@ -61,7 +61,9 @@
       <div class="flex flex-col">
         <div>Pasajeros</div>
         <app-divider></app-divider>
-        <app-passenger-item></app-passenger-item>
+        <ion-list>
+        <app-passenger-item text="👍️"></app-passenger-item>
+        </ion-list>
         <div class="h-4"></div>
       </div>
     </div>
