--- a/src/app/shared/components/adaptative-button/adaptative-button.component.html
+++ b/src/app/shared/components/adaptative-button/adaptative-button.component.html
@@ -4,7 +4,7 @@
 <!--padding variable-->
 <!--font variable-->
 
-<a class="{{ color }}  rounded-sm hover:{{ color_hover }} {{ size }}"
+<button class="{{ color }}  rounded-sm hover:{{ color_hover }} {{ size }}"
 >
   <div class="{{ font_size }} {{ text_color }}">{{ text }}</div>
-</a>
+</button>
