--- a/src/app/shared/components/outlined-button/outlined-button.component.html
+++ b/src/app/shared/components/outlined-button/outlined-button.component.html
@@ -1,4 +1,4 @@
-  <a
+  <button
     type="button" class="py-2 px-4 flex justify-center items-center border border-black hover:bg-gray-100 focus:ring-gray-500 focus:ring-offset-gray-200 text-black hover:text-gray-800 focus:text-gray-900 w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg">
     <div class="basis-5/12 flex items-end justify-end">
       <ng-content></ng-content>
@@ -6,4 +6,4 @@
     <div class="basis-7/12 flex items-center">
       {{contentText}}
     </div>
-  </a>
+  </button>
