--- a/src/app/shared/components/passenger-item/passenger-item.component.html
+++ b/src/app/shared/components/passenger-item/passenger-item.component.html
@@ -1,15 +1,11 @@
-<div class="flex items-center">
-  <div class="flex items-center gap-4 basis-2/3">
+<ion-item-sliding>
+  <ion-item>
+    <ion-label>Sliding</ion-label>
     <app-avatar-home [url]="userUrlImage"></app-avatar-home>
     <div>{{ userName }}</div>
-  </div>
-  <div class="basis-1/3">
-    <app-adaptative-button
-      text="Reportar"
-      size="w-24"
-      text_color="text-white"
-      font_size="text-base"
-      color_hover="bg-red-700"
-      color="bg-red-500"></app-adaptative-button>
-  </div>
-</div>
+  </ion-item>
+  <ion-item-options>
+    <ion-item-option>Favorite</ion-item-option>
+    <ion-item-option color="danger">Delete</ion-item-option>
+  </ion-item-options>
+</ion-item-sliding>
